# gif-stepper

./: CMakeLists.txt  README.md  install.sh
Source/: GifLoader.cpp  GifLoader.h  GifOverlayWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
